--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="main">
-        <div class="flowersContainer"></div>
-        <div class="retailersContainer"></div>
+        <section class="flowersContainer"></section>
+        <section class="retailersContainer"></section>
     </div>
 <script type = "module" src="/scripts/main.js"></script>
 </body>
